environment fix